# samples

./: config  files_installer.py  install  template
cxx/: Makefile
etc/: bash_completion
templates/cxx/: CMakeLists.txt  Makefile
templates/cxx/src/: .vimrc
templates/cxx/test/: CMakeLists.txt
templates/python/: makefile
templates/web/: index.html
templates/web/css/: main.css
